# format

./: .cspell.json  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .typos.toml  README.md  pyproject.toml  setup.cfg
.cspell/: config_dict.txt  dict.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  ci_standard_checks.yml  update_cache.yml  update_dependencies.yml  update_pre_commit.yml
format/: __init__.py  concurrency.py
requirements/: lint.txt
scripts/: update_dependencies.py
src/: format.py
