[metadata]
name = format
version = 1.0.0
description = Run custom formatting

[options]
packages = find:
install_requires =
    black==23.1.0
    add-trailing-comma==2.4.0

[options.entry_points]
console_scripts =
    format = src.format:main

[flake8]
exclude = .git,.\env,./env
max-line-length = 88
per-file-ignores =
  tests/*: S101
  src/format.py: S404,S603
