[metadata]
name = format
version = 1.0.2
description = Run custom formatting

[options]
packages = find:
install_requires =
    black==23.7.0
    add-trailing-comma==3.0.0
python_requires = >=3.8

[options.entry_points]
console_scripts =
    format = src.format:main

[flake8]
exclude = .git,.\env,./env
max-line-length = 88
